--- a/Curriculum-HTML.html
+++ b/Curriculum-HTML.html
@@ -56,7 +56,7 @@
                 Teen Wolf
             </li>
         </ul>
-    </ol>
+   
 
 <h2>
     <li>
@@ -74,5 +74,17 @@
             Los juegos del hambre
         </li>
     </ul>
-</body>
+    <h2>
+        <li>
+            Perfil
+        </li>
+    </h2>
+        <p>
+            Me gusta jugar al futbol, juego en un club de barrio de villa urquiza al futsal, en la liga Bafi, y también juego con mis amigos
+            en torneos. Me gusta pasar tiempo con mi familia, con mi novia y también voy a una parroquia por Saavedra que se llama Dulcisimo Nombre de Jesús.
+        </p>
+    </ol>
+<p>
+    Si te interesa contactarme podes completar el siguiente <a href="Form.html">Formulario</a>
+</p></body>
 </html>
